@@ -6,6 +6,9 @@ import string
 import UniProtRecord
 
 #
+# 06/04/2012	lec
+#	- TR11071/remove 'uniprotName', add emblID instead
+#
 # 05/14/2012	lec
 #	- TR11071/add 'uniprotName' parsing
 #
@@ -98,6 +101,19 @@ class Parser:
                     self.record.addEntrezGeneID(id)
 
             #
+            # Save an EMBL ID. If the input line looks like this:
+            #
+            # DR   EMBL; 12345; -.
+            #
+            # We want to extract the 12345. Do not add an ID that has already
+            # been added.
+            #
+            if self.line[0:10] == 'DR   EMBL;':
+                id = re.split(';', self.line[5:])[1].strip()
+                if not self.record.hasEMBLID(id):
+                    self.record.addEMBLID(id)
+
+            #
             # Save an PDB ID. If the input line looks like this:
             #
             # DR   PDB; 2PF4; X-ray; 3.10 A; A/B/C/D=1-589.
@@ -150,25 +166,6 @@ class Parser:
                 id = re.split(';', self.line[5:])[1].strip()
                 if not self.record.hasInterProID(id):
                     self.record.addInterProID(id)
-
-            #
-            # Save UniProt Name.  If the input line looks like this:
-            #
-            # GN   Name=Sh3bp2;
-            #
-            # We want to extract the Sh3bp2.
-            #
-            if self.line[0:10] == 'GN   Name=':
-		x = string.find(self.line, ';')
-		if x >= 0:
-		    name = self.line[10:x]
-		    if len(name) > 0:
-                        self.record.setUniProtName(name)
-
-            #
-            # Read the next line from the UniProt file.
-            #
-            self.line = self.fp.readline()
 
         #
         # If the record terminator was found, return the record object.
