@@ -26,7 +26,7 @@
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_tr_assoc.txt">uniprot_tr.assoc.txt</A> - TrEMBL accession ids
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_acc_assoc_err.txt">uniprot_acc.assoc_err.txt</A> - ERROR: UniProt ids that contain neither EntrezGene nor Ensembl ids
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_sp_assoc_err.txt">uniprot_sp.assoc_err.txt</A> - ERROR: SwissProt accession ids
-<LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_sp_assoc_mgi.txt">uniprot_sp.assoc_mgi.txt</A> - SwissProt accession ids found in MGI by UniProt "Name"
+<LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_sp_assoc_mgi.txt">uniprot_sp.assoc_mgi.txt</A> - SwissProt accession ids found in MGI by UniProt EMBL ID
 <LI><A HREF="/data/loads/uniprot/uniprotload/output/uniprot_tr_assoc_err.txt">uniprot_tr.assoc_err.txt</A> - ERROR: TrEMBL accession ids
 <P>
 </UL>
